# dipeen-os

./: .env.example  .gitignore  ADAPTER_GUIDE.md  AGENTS.md  ALPHA_RUNBOOK.md  BLUEPRINT_GUIDE.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  DOCTOR.md  GOOD_FIRST_ISSUES.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  SECURITY.md  VERIFIER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
agent-client/: .env.example  AGENTS.md  IDENTITY.md  SOUL.md  pyproject.toml
agent-client/dipeen_agent/: __main__.py  bun_link.py  client.py  config.py  handoff.py  llm.py  main.py  onboarding.py  personas.py  runtime.py  support_levels.py  tools.py
agent-client/dipeen_agent/runners/: __init__.py  base.py  claude_code.py  hermes_runner.py  omo_codex_light.py  omo_opencode.py
agent-client/tests/: test_agent_identity.py  test_bun_link.py  test_doctor_probe.py  test_handoff.py  test_import_smoke.py  test_join.py  test_onboarding.py  test_register_probe.py  test_registry.py  test_runners.py  test_runtime_deps.py  test_start_deprecated.py  test_support_levels.py
api/: .env.example  Dockerfile  Dockerfile.prod  pm_loop.py  pyproject.toml  telegram_bot.py
api/alembic/: env.py
api/alembic/versions/: 63695b172b01_initial_schema.py  a1b2c3d4e5f6_fix_current_task_id_length.py  f3_agent_quota.py  u1_users_and_invite_codes.py  w1_chat_metadata.py
api/app/: config.py  main.py  subscription_llm.py
api/app/channels/: __init__.py  base.py  openclaw.py
api/app/db/: models.py  session.py
api/app/demo/: __init__.py  product_alpha.py
api/app/nat/: __init__.py  cli.py  contracts.py  executors.py  worker.py  worker_http.py  workspace_cli.py
api/app/nat/adapters/: __init__.py  base.py  claude.py  codex.py  hermes.py  omo.py
api/app/nat/core/: __init__.py  artifact_store.py  capabilities_dipeen.py  capability_catalog.py  command_queue.py  conductor.py  coordinator.py  eventlog.py  inbound.py  ingest.py  meeting.py  outbound.py  permission_ledger.py  permission_nat.py  pipeline.py  policy.py  proposals.py  reconciler.py  registry.py  rooms.py  routing.py  run_store.py  slash.py  verifier.py  worker_registry.py  workspace_spec.py
api/app/nat/providers/: __init__.py  cli_common.py  inspection.py  lifecycle.py
api/app/nat/providers/claude/: __init__.py  inspect.py
api/app/nat/providers/codex/: __init__.py  inspect.py
api/app/nat/providers/fake/: __init__.py
api/app/nat/providers/hermes/: __init__.py  context_retrieval.py  inbound_artifacts.py  inspect.py  long_task.py  memory_candidate.py  probe.py  skill_candidate.py
api/app/nat/providers/omo/: __init__.py  inbound_artifacts.py  inbound_events.py  inspect.py  probe.py  state_claims.py  subtask_mapping.py
api/app/routers/: agents.py  auth.py  chat.py  control.py  control_plane.py  decisions.py  events.py  graph.py  hermes.py  meeting.py  onboarding.py  projects.py  tasks.py  teams.py  usage.py  workspace.py
api/app/schemas/: agent.py  decision.py  hermes.py  nat.py  node.py  project.py  runner.py  task.py
api/app/services/: control_plane.py  gatekeeper.py  hermes_registry.py  manifest.py  node_service.py  open_session.py  open_session_format.py  public_tunnel.py  remediation.py  run_journal.py  scope_policy.py  session_expose.py  telegram.py
api/scripts/: demo_check.py  e2e_smoke.py  real_nat_connected_regression.py  reset_db.py
api/tests/: conftest.py  test_artifacts_seam.py  test_capabilities_dipeen.py  test_capability_catalog.py  test_channels.py  test_config_cors_regex.py  test_config_guard.py  test_control_capabilities.py  test_control_intent.py  test_control_plane_api.py  test_cors_middleware.py  test_decisions_api.py  test_demo_product_alpha.py  test_dipeen_open_cli.py  test_dispatch_dependencies.py  test_dispatch_gatekeep.py  test_gatekeeper.py  test_graph.py  test_nat.py  test_nat_adapters.py  test_nat_assignment_routing.py  test_nat_capability_diagnostics.py  test_nat_contracts.py  test_nat_control_plane_api.py  test_nat_coordinator.py  test_nat_core.py  test_nat_cutover_invariants.py  test_nat_fake_provider.py  test_nat_http_permission_loop.py  test_nat_local_execute.py  test_nat_meeting_closure.py  test_nat_meeting_persist.py  test_nat_omo_hermes.py  test_nat_permission.py  test_nat_permission_loop.py  test_nat_pipeline.py  test_nat_provider_inspect.py  test_nat_provider_inspect_runtime.py  test_nat_provider_lifecycle.py  test_nat_provider_probe.py  (+22 more)
deploy/: setup.sh
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: dipeen-nossl.conf  dipeen.conf
docs/: ARCHITECTURE.md  GETTING_STARTED.md  INSTALL.md  PRODUCTION_PITCH.md  ROADMAP.md  SECURITY_MODEL.md  SUPPORT_LEVELS.md
scripts/: blender_mcp_generate_office_assets.py  blender_mcp_headless_start.py  blender_mcp_smoke_client.py  claude_asset_loop.ps1  coordinator_demo.py  gen_asset.py  install.ps1  install.sh  team_smoke.py  team_test.py  unity_mcp_probe.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
web/src/contexts/: AgentPanelContext.tsx
web/src/design-system/: dipeen-spatial-tokens.css  dipeen-spatial.tokens.json  dipeen-spatial.ts
web/src/game/: AgentCharacter.ts  EventBus.ts  PathRenderer.ts  SpeechBubble.ts  UserCharacter.ts  (+3 more)
(+93 files in other folders)
