[project]
name = "dipeen-agent-client"
version = "0.1.0"
description = "dipeen Agent Client — polls API, executes opencode, reports results"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
dipeen-agent = "dipeen_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dipeen_agent"]
