[project]
name = "dipeen-api"
version = "0.1.0"
description = "dipeen API Server — Local-First agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Auth
    "pyjwt>=2.8.0",
    # C-4 PM Loop
    "anthropic>=0.40.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
redis = [
    "redis[asyncio]>=5.0.0",
]
prod = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[asyncio]>=5.0.0",
]

# 통합 HQ CLI — `pip install -e api` 후 `dipeen demo`, `dipeen worker --remote <url>`,
# `dipeen task run`, `dipeen permission list/approve` 등. (노드 CLI는 `dipeen-agent`)
[project.scripts]
dipeen = "app.nat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
