[project]
name = "dipeen"
version = "0.3.0"
description = "Dipeen — the local-first control plane where AI agents become accountable teammates. Installs the `dipeen` host CLI (open/close/demo/task/worker/permission)."
readme = { text = "# Dipeen\n\nThe local-first control plane where AI agents become accountable teammates. This package installs the `dipeen` host CLI and the Dipeen HQ control plane.\n\n- `dipeen demo` — no-key deterministic proof of the team loop\n- `dipeen open [--dev]` — boot the HQ, mint an invite, print the Control Tower URL\n- Capability routing, evidence-first completion, permissioned action (dry-run by default)\n\nDipeen assigns work, renders local-agent prompts, and collects evidence from local execution. It does not auto-drive your agents yet.\n\nThe teammate worker CLI ships separately as `dipeen-agent`. See https://github.com/cjw0076/dipeen-os\n", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = ["ai-agents", "control-plane", "orchestration", "local-first", "byok"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Auth
    "pyjwt>=2.8.0",
    # C-4 PM Loop
    "anthropic>=0.40.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
redis = [
    "redis[asyncio]>=5.0.0",
]
prod = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[asyncio]>=5.0.0",
]

# 통합 HQ CLI — `pip install -e api` 후 `dipeen demo`, `dipeen worker --remote <url>`,
# `dipeen task run`, `dipeen permission list/approve` 등. (노드 CLI는 `dipeen-agent`)
[project.scripts]
dipeen = "app.nat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
